--- a/talent-management/appsettings.json
+++ b/talent-management/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
+    }
+  },
+  "ConnectionStrings": {
+      "sqlConnection":  "server=(localdb)\\mssqllocaldb; database=TalentManagement_db; integrated security=true"
     },
-"AllowedHosts": "*"
-}
+    "AllowedHosts": "*"
+  }
